[fix] Fix form position for the window not to be stretched

--- a/src/main/webapp/resources/css/sped.css
+++ b/src/main/webapp/resources/css/sped.css
@@ -558,3 +558,7 @@ button.reset-filters {
 div.module-type.popover {
     max-width: min-content;
 }
+
+.form-modal.modal-dialog {
+    margin: 1% auto auto auto;
+}
